SFS-1537. Fixed button alignment in Add Product page

--- a/src/app/create-product/create-product.component.scss
+++ b/src/app/create-product/create-product.component.scss
@@ -52,7 +52,6 @@
         padding-bottom: 20px;
         outline: none;
         max-width: 400px;
-        margin: 0 auto;
         margin-top: 30px;
         margin-bottom: 30px;
         display: block;
