--- a/src/app/form-add-product/avanced-pricing/avanced-pricing.component.scss
+++ b/src/app/form-add-product/avanced-pricing/avanced-pricing.component.scss
@@ -129,7 +129,7 @@ input.errorname{
 }
 
 .tab-row{
-    max-width: 1000px;
+    // max-width: 1000px;
     margin: 0 auto;
     .selectionable{
         color: $light_blue;
